# psychopath

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rustfmt.toml  todo.txt
.github/: pull_request_template.md
example_scenes/: cornell_box.psy  cube.psy
licenses/: MIT.txt
mem_arena/: Cargo.toml
mem_arena/src/: lib.rs
psychoblend/: LICENSE.md  __init__.py  assembly.py  psy_export.py  render.py  ui.py  util.py  world.py
src/: algorithm.rs  assembly.rs  bbox.rs  bbox4.rs  bitstack.rs  boundable.rs  bvh.rs  camera.rs  color.rs  data_tree.rs  datatree.rs  float4.rs  fp_utils.rs  halton.py  halton.rs  hash.rs  hilbert.rs  image.rs  lerp.rs  main.rs  math.rs  matrix.rs  mis.rs  normal.rs  objects_split.rs  point.rs  ray.rs  renderer.rs  sah.rs  sampling.rs  scene.rs  timer.rs  tracer.rs  transform_stack.rs  triangle.rs  vector.rs  world.rs
src/accel/: bvh.rs  bvh4.rs  bvh4_simd.rs  bvh4_table.inc  bvh_base.rs  create_bvh4_table.py  light_array.rs  light_tree.rs  mod.rs  objects_split.rs
src/color/: generate_spectra_rust.py  mod.rs  spectra_xyz.rs
src/light/: distant_disk_light.rs  mod.rs  rectangle_light.rs  sphere_light.rs
src/light_accel/: light_tree.rs  mod.rs
src/math/: matrix.rs  mod.rs  normal.rs  point.rs  vector.rs
src/parse/: basics.rs  data_tree.rs  mod.rs  parse_utils.rs  psy.rs  psy_assembly.rs  psy_light.rs  psy_mesh_surface.rs  psy_surface_shader.rs
src/sampling/: halton.py  halton.rs  mod.rs  monte_carlo.rs
src/scene/: assembly.rs  mod.rs  scene.rs  world.rs
src/shading/: mod.rs  surface_closure.rs
src/surface/: bilinear_patch.rs  micropoly_batch.rs  mod.rs  triangle.rs  triangle_mesh.rs
sub_crates/blue_noise_mask/: Cargo.toml  build.rs
sub_crates/blue_noise_mask/src/: lib.rs
sub_crates/bvh_order/: Cargo.toml  build.rs
sub_crates/bvh_order/src/: lib.rs
sub_crates/color/: Cargo.toml  build.rs
sub_crates/color/src/: lib.rs
sub_crates/compact/: Cargo.toml  LICENSE.md
sub_crates/compact/benches/: bench.rs
sub_crates/compact/src/: lib.rs
sub_crates/compact/src/fluv/: fluv32.rs  mod.rs
sub_crates/compact/src/shared_exp/: mod.rs  signed48.rs  unsigned32.rs  unsigned40.rs
sub_crates/compact/src/unit_vec/: mod.rs  oct32.rs
sub_crates/compact/tests/: proptest_tests.rs
sub_crates/data_tree/: Cargo.toml
sub_crates/data_tree/src/: lib.rs  parse.rs  reader.rs
sub_crates/float4/: Cargo.toml
sub_crates/float4/src/: lib.rs
sub_crates/halton/: Cargo.toml  LICENSE.md  build.rs
sub_crates/halton/src/: lib.rs
sub_crates/math3d/: Cargo.toml
sub_crates/math3d/src/: lib.rs  matrix.rs  normal.rs  point.rs  transform.rs  vector.rs
sub_crates/mem_arena/: Cargo.toml
sub_crates/mem_arena/src/: lib.rs
sub_crates/oct32norm/: Cargo.toml
sub_crates/oct32norm/benches/: bench.rs
sub_crates/oct32norm/src/: lib.rs
sub_crates/oct32norm/tests/: proptest_tests.proptest-regressions  proptest_tests.rs
sub_crates/sobol/: Cargo.toml  LICENSE.md  build.rs
sub_crates/sobol/benches/: bench.rs
sub_crates/sobol/direction_numbers/: LICENSE.txt  joe-kuo-cessen-3.1024.txt  joe-kuo-other-0.1024.txt  joe-kuo-other-2.1024.txt  joe-kuo-other-3.1024.txt  joe-kuo-other-4.1024.txt  new-joe-kuo-5.1024.txt  new-joe-kuo-6.1024.txt  new-joe-kuo-7.1024.txt
sub_crates/sobol/src/: lib.rs  matrices.rs  wide.rs
sub_crates/spectra_xyz/: Cargo.toml
sub_crates/spectra_xyz/src/: generate_spectra_tables.py  lib.rs  spectra_tables.rs
sub_crates/spectral_upsampling/: Cargo.toml  LICENSE.md  build.rs
sub_crates/spectral_upsampling/src/: generate_spectra_tables.py  jakob.rs  lib.rs  meng.rs  xyz_5nm_380_780.csv
sub_crates/spectral_upsampling/src/meng/: generate_meng_spectra_tables.py  meng_spectra_tables.rs
sub_crates/trifloat/: Cargo.toml
sub_crates/trifloat/benches/: bench.rs
sub_crates/trifloat/src/: fluv32.rs  lib.rs  luv32.rs  rgb32.rs  signed48.rs  unsigned32.rs  unsigned40.rs
