[workspace]
members = [
    "sub_crates/bvh_order",
    "sub_crates/color",
    "sub_crates/float4",
    "sub_crates/halton",
    "sub_crates/math3d",
    "sub_crates/mem_arena",
    "sub_crates/oct32norm",
    "sub_crates/sobol",
    "sub_crates/spectra_xyz",
    "sub_crates/trifloat"
]

[package]
name = "psychopath"
version = "0.1.0"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]

[profile.release]
debug = true

[dependencies]
# Crates.io dependencies
base64 = "0.9"
clap = "2.30"
crossbeam = "0.3"
half = "1.0"
lazy_static = "1.0"
nom = "2.2"
num_cpus = "1.8"
openexr = "0.6.0"
png_encode_mini = "0.1.2"
rustc-serialize = "0.3"
scoped_threadpool = "0.1"
time = "0.1"

# Local crate dependencies
[dependencies.bvh_order]
path = "sub_crates/bvh_order"

[dependencies.color]
path = "sub_crates/color"

[dependencies.float4]
path = "sub_crates/float4"

[dependencies.halton]
path = "sub_crates/halton"

[dependencies.math3d]
path = "sub_crates/math3d"

[dependencies.mem_arena]
path = "sub_crates/mem_arena"

[dependencies.oct32norm]
path = "sub_crates/oct32norm"

[dependencies.sobol]
path = "sub_crates/sobol"

[dependencies.spectra_xyz]
path = "sub_crates/spectra_xyz"

[dependencies.trifloat]
path = "sub_crates/trifloat"