[workspace]
members = [
    "sub_crates/bvh_order",
    "sub_crates/color",
    "sub_crates/data_tree",
    "sub_crates/halton",
    "sub_crates/math3d",
    "sub_crates/oct32norm",
    "sub_crates/sobol",
    "sub_crates/spectral_upsampling",
    "sub_crates/trifloat"
]

[package]
name = "psychopath"
version = "0.1.0"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
# Crates.io dependencies
base64 = "0.9"
clap = "2.30"
copy_in_place = "0.2.0"
crossbeam = "0.3"
half = "1.0"
lazy_static = "1.0"
nom = "5"
num_cpus = "1.8"
openexr = "0.6.0"
kioku = "0.3"
png_encode_mini = "0.1.2"
rustc-serialize = "0.3"
scoped_threadpool = "0.1"
time = "0.1"
glam = {git="https://github.com/bitshifter/glam-rs.git", rev="0f314f99", default-features=false, features=["approx"]}

# Local crate dependencies
[dependencies.bvh_order]
path = "sub_crates/bvh_order"

[dependencies.color]
path = "sub_crates/color"

[dependencies.data_tree]
path = "sub_crates/data_tree"

[dependencies.halton]
path = "sub_crates/halton"

[dependencies.math3d]
path = "sub_crates/math3d"

[dependencies.oct32norm]
path = "sub_crates/oct32norm"

[dependencies.sobol]
path = "sub_crates/sobol"

[dependencies.spectral_upsampling]
path = "sub_crates/spectral_upsampling"

[dependencies.trifloat]
path = "sub_crates/trifloat"