[workspace]
members = [
    "sub_crates/bvh_order",
    "sub_crates/color",
    "sub_crates/compact",
    "sub_crates/halton",
    "sub_crates/math3d",
    "sub_crates/spectral_upsampling",
]

[package]
name = "psychopath"
version = "0.1.0"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
edition = "2018"
license = "GPL v3"

[profile.release]
debug = true

[dependencies]
# Crates.io dependencies
base64 = "0.9"
clap = "2.30"
copy_in_place = "0.2.0"
crossbeam = "0.3"
half = "1.0"
lazy_static = "1.0"
nom = "5"
num_cpus = "1.8"
openexr = "0.7"
kioku = "0.3"
sobol_burley = "0.2"
png_encode_mini = "0.1.2"
rustc-serialize = "0.3"
scoped_threadpool = "0.1"
time = "0.1"
glam = {git="https://github.com/bitshifter/glam-rs.git", rev="0f314f99", default-features=false, features=["approx"]}
fastapprox = "0.3"

# Local crate dependencies
[dependencies.bvh_order]
path = "sub_crates/bvh_order"

[dependencies.color]
path = "sub_crates/color"

[dependencies.compact]
path = "sub_crates/compact"
[dependencies.halton]

path = "sub_crates/halton"

[dependencies.math3d]
path = "sub_crates/math3d"

[dependencies.spectral_upsampling]
path = "sub_crates/spectral_upsampling"
