[package]
name = "math3d"
version = "0.1.0"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
edition = "2018"
license = "MIT, Apache 2.0"

[lib]
name = "math3d"
path = "src/lib.rs"

# Local crate dependencies
[dependencies]
glam = {git="https://github.com/bitshifter/glam-rs.git", rev="0f314f99", default-features=false, features=["approx"]}
approx = "0.3"
