[package]
name = "spectral_upsampling"
version = "0.1.0"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "spectral_upsampling"
path = "src/lib.rs"

[dependencies]
glam = {git="https://github.com/bitshifter/glam-rs.git", rev="0f314f99", default-features=false, features=["approx"]}